Add fixtures, load fixtures on the first build

--- a/compose.yml
+++ b/compose.yml
@@ -42,7 +42,7 @@ services:
       REACTIVE_SERVICE_URL: ${REACTIVE_SERVICE_URL:-http://reactive_cache:8081/v1}
     command: >
       sh -c "python manage.py migrate &&
-             python manage.py createsuperuser --noinput 
+             python manage.py load_initial_data 
              python manage.py runserver 0.0.0.0:3031"
 
   # Reverse proxy
