--- a/compose.yml
+++ b/compose.yml
@@ -20,6 +20,9 @@ services:
       - ./www:/app
     environment:
       REACT_APP_PUBLIC_BACKEND_URL: ${REACT_APP_PUBLIC_BACKEND_URL:-https://localhost/api/}
+    command: >
+      sh -c "npm install &&
+             npm run start"
 
   # Web application
   web:
