--- a/reactive_service/package.json
+++ b/reactive_service/package.json
@@ -9,8 +9,9 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "@skipruntime/helpers": "^0.0.10",
-    "@skipruntime/server": "^0.0.10",
+    "@skipruntime/helpers": "^0.0.12",
+    "@skipruntime/server": "^0.0.12",
+    "@skipruntime/core": "^0.0.12",
     "postgres": "^3.4.5"
   },
   "devDependencies": {
