--- a/reactive_service/package.json
+++ b/reactive_service/package.json
@@ -9,10 +9,11 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "@skipruntime/helpers": "^0.0.12",
-    "@skipruntime/server": "^0.0.12",
-    "@skipruntime/core": "^0.0.12",
-    "postgres": "^3.4.5"
+    "@skipruntime/core": "0.0.12",
+    "@skipruntime/wasm": "0.0.12",
+    "@skipruntime/server": "0.0.12",
+    "@skipruntime/helpers": "0.0.12",
+    "@skip-adapter/postgres": "0.0.12"
   },
   "devDependencies": {
     "@skiplabs/eslint-config": "^0.0.1",
